--- a/pages/profile/index.wxss
+++ b/pages/profile/index.wxss
@@ -1,1 +1,72 @@
 /* pages/profile/index.wxss */
+.headerInfo{
+      display: flex;
+    /* justify-content: center; */
+    align-items: center;
+}
+.headerInfo view:nth-child(1){
+}
+.headerInfo view:nth-child(1) image{
+        display: inline-block;
+        height: 30vw;
+        width: 30vw;
+        border-radius: 50%;
+        margin: 3vw;
+}
+.headerInfo view:nth-child(2){
+        display: flex;
+      flex-direction: column;
+      
+}
+.container{
+    height: fit-content;
+    min-height: 100vh;
+    background: rgba(242,242,242,1);
+}
+  .crmInfo{
+    display: flex;
+    flex-direction: column;
+    margin: 13px 10px;
+    border-radius: 5px;
+    padding: 10px;
+    padding-bottom: 0;
+    background: white;
+  }
+  .sales_notebook{
+     height: fit-content;
+    background: white;
+    margin: 13px 10px;
+    border-radius: 5px;
+    padding: 10px;
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  .sales_notebook .weui-textarea{
+    max-height: 125px;
+    /* min-height: 25px; */
+  }
+.tags{
+      padding: 10px;
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+      margin: 13px 10px;
+    border-radius: 5px;
+   background: white;
+
+}
+.singleTag{
+  background: #3c7ec9;
+  border-radius: 25px;
+  padding: 5px;
+  color: white;
+  margin-right: 3px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.tags_tagBox{
+  /* display: flex; */
+  white-space: pre-wrap;
+}
