--- a/pages/profile/index.wxml
+++ b/pages/profile/index.wxml
@@ -25,7 +25,7 @@
                 </view>
               </view>
             </view>
-           <view class="weui-cells weui-cells_after-title">
+           <view class="weui-cells weui-cells_after-title edit">
             <navigator url="/pages/profile/detailPage/crmInfo/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__bd">浏览完整信息</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
@@ -42,8 +42,8 @@
                 <textarea class="weui-textarea" placeholder="" disabled  value="{{noteInfo.profile_note.note}}" id="noteTextarea" maxlength="-1"></textarea>
               </view>
             </view>
-            <view class="weui-cells weui-cells_after-title">
-            <navigator url="/pages/profile/detailPage/crmInfo/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <view class="weui-cells weui-cells_after-title edit">
+            <navigator url="/pages/profile/detailPage/saleNote/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__bd">修改</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </navigator>
@@ -70,8 +70,8 @@
           <!--</div>-->
         <!--</div>-->
       </view>
-        <view class="weui-cells weui-cells_after-title">
-            <navigator url="/pages/profile/detailPage/crmInfo/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cells weui-cells_after-title edit">
+            <navigator url="/pages/profile/detailPage/tagInfo/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__bd">修改</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </navigator>
