--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,10 +1,14 @@
+.container{
+  display: flex;
+  justify-content: center;
+}
 .recommend{
   display: flex;
   justify-content: center;
   margin: 0 20px;
 }
 .recommend>view{
-  width: 80%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,6 +21,17 @@
 }
 .swiper{
   margin:5px;
+}
+.swiper swiper{
+  height: 200px;
+}
+.swiper_image{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper_image image{
+  width: 100%;
 }
 .icon{
   width: 20px;
@@ -59,4 +74,56 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: pre-wrap;
+}
+.theme{
+  margin-top: 30px;
+}
+.theme>view>view>image{
+  width: 25px;
+  height: 25px;
+}
+.themeModule{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.themeModule>view:nth-child(1){
+  /* background: rgb(251, 178, 23) */
+}
+.themeModule>view:nth-child(2){
+  /* background: rgb(254, 67, 101) */
+}
+.themeModule>view:nth-child(3){
+  /* background: rgb(229, 187, 129) */
+}
+.themeModule>view:nth-child(4){
+  /* background: rgb(107, 194, 53) */
+}
+.theme_module_item{
+   overflow-y: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+   /* width: 50%; */
+    width: 45vw;
+     height: 100px;
+   border: 1px solid gainsboro;
+     border-radius: 5px;
+     margin: 10px 5px;
+}
+.theme_module_item>view image{
+  display: block;
+ 
+    border-radius: 5px;
+
+
+}
+.theme_module_item>view>image{
+
+
+}
+.theme_module_title{
+  position: absolute;
+  /* top: 35%; */
+  color: white;
 }
